--- a/views/agz.slim
+++ b/views/agz.slim
@@ -32,7 +32,7 @@ link href=url("/css/print_a4.css") rel="stylesheet" media="all"
            #{s.geschlecht == 3 ? "Er":"Sie"} war zuletzt #{s.schueler_studierende} in der Klasse #{s.klasse}.
           .voffset-1
           |Leistungen laut Konferenzbeschluss vom #{(hj.konferenzdatum).strftime("%d.%m.%Y")}:
-      -if s.bk_abschluss.zulassung?
+      -if s.bk_abschluss.zulassung? == true
         -puts "Abschlussnoten werden ausgegeben"
         ==partial :p_asz_zeugnis_noten, :s => s, :hj => hj, :repo => repo
       -else
