--- a/views/agz_zweiseitig.slim
+++ b/views/agz_zweiseitig.slim
@@ -31,7 +31,7 @@ link href=url("/css/print_a4.css") rel="stylesheet" media="all"
            #{s.geschlecht == 3 ? "Er":"Sie"} war zuletzt #{s.schueler_studierende} in der Klasse #{s.klasse}.
           .voffset-1
           |Leistungen laut Konferenzbeschluss vom #{(hj.konferenzdatum).strftime("%d.%m.%Y")}:
-      -if s.bk_abschluss && s.bk_abschluss.zulassung? && s.bk_abschluss.class != Presenters::StringSaver::Null
+      -if s.bk_abschluss.zulassung? == true
         ==partial :p_asz_zeugnis_noten, :s => s, :hj => hj, :repo => repo
       -else
         ==partial :p_zeugnis_noten, :s => s, :hj => hj, :repo => repo
