--- a/views/partials/p_zeugnis_kopf.slim
+++ b/views/partials/p_zeugnis_kopf.slim
@@ -1,7 +1,7 @@
 .row
   .col-xs-12
     /.voffset-3
-    b #{s.anrede} #{s.vorname} #{s.zusatz} #{s.name}
+    b #{s.anrede} #{s.vorname} #{s._zusatz} #{s.name}
     br /
     |geboren am #{(s.geburtsdatum).strftime("%d.%m.%Y")} in #{s.geburtsort}
     br /
