--- a/views/agz_zweiseitig.slim
+++ b/views/agz_zweiseitig.slim
@@ -22,7 +22,7 @@ link href=url("/css/print_a4.css") rel="stylesheet" media="all"
               br/
               |Abschluss #{s.berufsbezeichnung_mw}
           .voffset-1
-          b #{s.anrede} #{s.vorname} #{s.zusatz} #{s.name}
+          b #{s.anrede} #{s.vorname} #{s._zusatz} #{s.name}
           br /
           |geboren am #{(s.geburtsdatum).strftime("%d.%m.%Y")} in #{s.geburtsort}
           br /
